fix: note & reminder visible on light mode

--- a/docs/src/styles/custom-css.css
+++ b/docs/src/styles/custom-css.css
@@ -139,11 +139,6 @@ starlight-menu-button svg {
   color: var(--sl-color-text);
 }
 
-.starlight-aside--note .starlight-aside__title,
-.starlight-aside--tip .starlight-aside__title {
-  color: white;
-}
-
 .starlight-aside--danger {
   background-color: #f100002e;
   border: solid 1px red;
